--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,3 @@
-
-# Created by https://www.toptal.com/developers/gitignore/api/macos,windows,visualstudiocode,jetbrains+all,node,python,flask
-# Edit at https://www.toptal.com/developers/gitignore?templates=macos,windows,visualstudiocode,jetbrains+all,node,python,flask
-
 ### Flask ###
 instance/*
 !instance/.gitignore
@@ -339,6 +335,7 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variables file
+.env
 .env.test
 .env.production
 
