--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ click==8.0.3
 Flask==2.0.2
 Flask-Cors==3.0.10
 flask-talisman==0.8.1
+gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
