improve docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,7 @@ version: "3.8"
 services:
   api:
     build: .
-    image: api_flask_python_hello-world_starter
-    container_name: api_flask_python_hello-world_starter
+    image: api_flask_python_hello-world:starter
     ports:
       - 6060:6060
     env_file:
