--- a/.dockerignore
+++ b/.dockerignore
@@ -6,7 +6,7 @@
 instance/*
 !instance/.gitignore
 .webassets-cache
-#.env
+.env
 
 ### Flask.Python Stack ###
 # Byte-compiled / optimized / DLL files
